# path-algorithms

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: publish.yml  rust.yml
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
