[package]
name = "path-algorithms"
version = "0.0.1"
description = "A Tauri App"
authors = ["FarerABR"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
rand = { version = "0.8.5" }
tauri = { version = "1", features = [ "updater", "dialog-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
